# EMILE

./: .gitmodules  m68k-buildroot-linux-musl.txt  m68k-linux-gnu.txt  meson.build  meson.options
.github/workflows/: build.yaml
first/: meson.build
libblock/: block_lseek.c  meson.build
libblock/include/: libblock.h
libconfig/: meson.build
libcontainer/: container_lseek.c  meson.build
libemile/: emile_scsi_get_rdev.c  emile_second_create_mapfile.c  meson.build
libext2/: ext2_lseek.c  ext2_utils.c  meson.build
libext2/include/: libext2.h
libfloppy/: meson.build
libgzip/: meson.build
libgzip/include/: zconf.h
libiso9660/: iso9660_lseek.c  meson.build
libiso9660/include/: libiso9660.h
libmacos/: meson.build
libmap/: meson.build
libscsi/: meson.build  scsi_INQUIRY.c  scsi_READ.c  scsi_READ_CAPACITY.c  scsi_REQUEST_SENSE.c  scsi_TEST_UNIT_READY.c  scsi_command.c  scsi_open.c  scsi_read_sector.c
libscsi/include/: libscsi.h
libstream/: meson.build  stream_lseek.c
libstream/include/: libstream.h
libui/: edit.c  meson.build
libunix/: meson.build
second/: config.c  enter_kernel040.S  head.S  load.c  main.c  meson.build  vga.c  vga.h
subprojects/bootloader/: meson.build
subprojects/bootloader/libui/: edit.c  meson.build  progressbar.c  scrolllist.c  window.c
subprojects/bootloader/libui/include/: libui.h
subprojects/bootloader/libunix/: meson.build  read.c  write.c
subprojects/bootloader/libunix/include/: libunix.h
subprojects/bootloader/relocate_rela/: compiler.h  meson.build  relocate-rela.c
subprojects/bootloader/second/: MMU030.c  MMU030.h  MMU040.c  MMU040.h  Makefile  arch.c  asm_MMU030.S  asm_MMU040.S  bank.c  bank.h  bootenv.c  bootenv.h  bootinfo.c  bootinfo.h  bootx.c  bootx.h  cli.c  config.c  config.h  console.c  console.h  driver.c  enter_kernel.c  enter_kernel.h  enter_kernel030.S  enter_kernel030.h  enter_kernel040.h  enter_kernelnoMMU.h  font_8x16.c  head.S  keyboard.c  keyboard.h  ld.script  load.c  load.h  main.c  meson.build  misc.c  misc.h  reloc.c  (+5 more)
subprojects/libconfig/: config_add_property.c  config_find_entry.c  config_find_indexed_property.c  config_get_indexed_property.c  config_get_next_property.c  config_get_property.c  config_remove_indexed_property.c  config_set_indexed_property.c  config_set_property.c  meson.build
subprojects/libconfig/include/: libconfig.h
subprojects/libemile/: emile_first_get_param.c  emile_first_set_param.c  emile_first_set_param_scsi.c  emile_first_set_param_scsi_extents.c  emile_floppy_create_image.c  emile_scsi_create_container.c  emile_scsi_get_dev.c  emile_scsi_get_rdev.c  emile_second_create_mapfile.c  emile_second_get_configuration.c  emile_second_get_param.c  emile_second_set_configuration.c  emile_second_set_param.c  meson.build  meson.options
subprojects/libemile/include/: bootblock.h  emile.h  libemile.h
subprojects/libmacos/: GetDCtlEntry.c  OpenDriver.c  SerGetBuf.c  meson.build
subprojects/libmacos/include/macos/: devices.h  errors.h  events.h  files.h  gestalt.h  init.h  lowmem.h  memory.h  osutils.h  quickdraw.h  romdefs.h  scsi.h  serial.h  slotmanager.h  traps.h  types.h  video.h
subprojects/libstream/: meson.build  meson.options  stream_open.c  stream_uncompress.c  stream_uncompress.h  stream_uncompress_gzip.c
subprojects/libstream/include/: libstream.h
subprojects/libstream/libblock/: block_close.c  block_fstat.c  block_init.c  block_lseek.c  block_mount.c  block_read.c  meson.build
subprojects/libstream/libblock/include/: libblock.h
subprojects/libstream/libcontainer/: container.h  container_close.c  container_fstat.c  container_init.c  container_lseek.c  container_mount.c  container_read.c  meson.build
subprojects/libstream/libcontainer/include/: libcontainer.h
subprojects/libstream/libext2/: ext2.h  ext2_close.c  ext2_closedir.c  ext2_fstat.c  ext2_init.c  ext2_lseek.c  ext2_mount.c  ext2_opendir.c  ext2_read.c  ext2_readdir.c  ext2_utils.c  ext2_utils.h  meson.build
subprojects/libstream/libext2/include/: libext2.h
subprojects/libstream/libfloppy/: floppy_open.c  meson.build
subprojects/libstream/libfloppy/include/: libfloppy.h
subprojects/libstream/libiso9660/: iso9660.h  iso9660_init.c  iso9660_is_directory.c  iso9660_lseek.c  iso9660_mount.c  iso9660_opendir.c  iso9660_readdir.c  meson.build
subprojects/libstream/libiso9660/include/: libiso9660.h
subprojects/libstream/libmap/: map_block0_write.c  map_bootblock_get_type.c  map_bootblock_read.c  map_bootblock_write.c  map_checksum.c  map_close.c  map_geometry.c  map_get_blocksize.c  map_get_bootinfo.c  map_get_driver_info.c  map_get_driver_number.c  map_get_driver_signature.c  map_get_number.c  map_get_partition_geometry.c  map_get_partition_name.c  map_get_partition_type.c  map_has_apple_driver.c  map_init.c  map_is_valid.c  map_open.c  map_partition_get_flags.c  map_partition_is_bootable.c  map_partition_is_startup.c  map_partition_is_valid.c  map_partition_set_bootable.c  map_partition_set_flags.c  map_partition_set_startup.c  map_read.c  map_read_driver.c  map_read_sector.c  map_seek_driver_partition.c  map_set_bootinfo.c  map_set_driver_info.c  map_set_driver_number.c  map_set_partition_name.c  map_set_partition_type.c  map_set_startup.c  map_update_checksum.c  map_write.c  map_write_driver.c  (+2 more)
subprojects/libstream/libmap/include/: libmap.h
subprojects/libstream/libscsi/: meson.build  scsi_INQUIRY.c  scsi_READ.c  scsi_READ_CAPACITY.c  scsi_REQUEST_SENSE.c  scsi_TEST_UNIT_READY.c  scsi_command.c  scsi_open.c
subprojects/libstream/libscsi/include/: libscsi.h
subprojects/tools/: device.c  emile-conf.c  emile-first-tune.c  emile-install.c  emile-map-set.c  emile-mktable.c  emile-set-cmdline.c  emile-set-output.c  emile.c  emile_scanbus.c  gzio.c  meson.build  minigzip.c  read_vmlinuz.c
subprojects/tools/ext2/: ext2.h  ext2_cat.c  ext2_ls.c  meson.build
subprojects/tools/include/: device.h
subprojects/tools/iso9660/: emile-mkisofs.c  iso9660.h  iso9660_cat.c  iso9660_ls.c  meson.build
tools/: emile-install.c  emile.c  meson.build
(+18 files in other folders)
