libunix_srcs = [ 'divsi3.S',
                 'modsi3.S',
                 'mulsi3.S',
                 'udivsi3.S',
                 'umodsi3.S',
                 'free.c',
                 'malloc.c',
                 'memcpy.c',
                 'memset.c',
                 'printf.c',
                 'putchar.c',
                 'puts.c',
                 'read.c',
                 'sprintf.c',
                 'strcpy.c',
                 'strlen.c',
                 'strncpy.c',
                 'vsprintf.c',
                 'write.c',
                 'strcmp.c',
                 'strncmp.c',
                 'strtol.c',
                 'strdup.c' ]
libunix = static_library('libunix', libunix_srcs,
                         include_directories:  libmacos_inc)
libunix_dep = declare_dependency(link_with: libunix)
